@@ -107,7 +107,7 @@
  *
  ****************************************************************************/
 
-int nxtk_drawcircletoolbar(NXTKWINDOW hfwnd, FAR struct nxgl_point_s *center,
+int nxtk_drawcircletoolbar(NXTKWINDOW hfwnd, FAR const struct nxgl_point_s *center,
                            nxgl_coord_t radius, nxgl_coord_t width,
                            nxgl_mxpixel_t color[CONFIG_NX_NPLANES])
 {
