@@ -89,7 +89,7 @@
  *
  ****************************************************************************/
 
-int nxtk_fillcircletoolbar(NXWINDOW hfwnd, FAR struct nxgl_point_s *center,
+int nxtk_fillcircletoolbar(NXWINDOW hfwnd, FAR const struct nxgl_point_s *center,
                            nxgl_coord_t radius,
                            nxgl_mxpixel_t color[CONFIG_NX_NPLANES])
 {
