@@ -651,7 +651,7 @@ EXTERN int nx_drawline(NXWINDOW hwnd, FAR struct nxgl_vector_s *vector,
  *
  ****************************************************************************/
 
-EXTERN int nx_drawcircle(NXWINDOW hwnd, FAR struct nxgl_point_s *center,
+EXTERN int nx_drawcircle(NXWINDOW hwnd, FAR const struct nxgl_point_s *center,
                          nxgl_coord_t radius, nxgl_coord_t width,
                          nxgl_mxpixel_t color[CONFIG_NX_NPLANES]);
 
@@ -672,7 +672,7 @@ EXTERN int nx_drawcircle(NXWINDOW hwnd, FAR struct nxgl_point_s *center,
  *
  ****************************************************************************/
 
-EXTERN int nx_fillcircle(NXWINDOW hwnd, FAR struct nxgl_point_s *center,
+EXTERN int nx_fillcircle(NXWINDOW hwnd, FAR const struct nxgl_point_s *center,
                          nxgl_coord_t radius,
                          nxgl_mxpixel_t color[CONFIG_NX_NPLANES]);
 
